made quick function that alerts if the backend is not running

--- a/style.css
+++ b/style.css
@@ -532,13 +532,19 @@ header>nav {
 }
 header>nav>section {
     width: 50%;
+
+}
+
+header>nav>#searchwindow>section>div {
+    width: 50%;
 }
 
 #searchwindow {
     display: flex;
 }
 #mucleFilter {
-    display: flex;
+    display: inline;
+    width: 50%;
 
 }
 
